decrease z-index of leaflet controls to fix z order of controls and dropdowns

--- a/css/style.css
+++ b/css/style.css
@@ -760,3 +760,7 @@ span.btn {
 .leaflet-popup .btn {
     white-space: normal !important;
 }
+
+.leaflet-top, .leaflet-bottom {
+    z-index: 999 !important;
+}
